Checking in Boris Zbarsky's (bzbarsky@mit.edu) fix for bug 79818, making more CSSRules implement DOM interfaces. r=bryner, sr=jst